# chess-platform

./: .gitignore  README.md  docker-compose.yml  docker-push.sh
backend/: .dockerignore  .env_example  docker-compose.yml  pyproject.toml
backend/common/: auth.py
backend/common/models/: game.py
backend/common/schemas/: game.py
backend/services/analysis-service/: Dockerfile  start.sh
backend/services/analysis-service/app/: analysis.py  main.py  storage_utils.py
backend/services/api-gateway/: Dockerfile  start.sh
backend/services/api-gateway/app/: main.py  rate_limit.py
backend/services/api-gateway/app/routers/: analysis.py  auth.py  game.py  match.py  players.py  proxy.py  users.py
backend/services/bot-service/app/: main.py
backend/services/game-service/: Dockerfile
backend/services/game-service/alembic/: env.py
backend/services/game-service/app/: db.py  handlers.py  main.py  storage_utils.py
backend/services/game-service/app/models/: move.py
backend/services/game-service/app/routers/: internal.py
backend/services/game-service/app/schemas/: move.py
backend/services/matchmaker/: Dockerfile
backend/services/matchmaker/app/: db.py  main.py  redis_utils.py  worker.py
backend/services/users-service/: Dockerfile  start.sh
backend/services/users-service/alembic/: env.py
backend/services/users-service/app/: db.py  main.py  schemas.py  users.py
backend/services/users-service/app/routers/: custom_router.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
terraform/: .env_example  README.md  compute.tf  data.tf  lb.tf  (+8 more)
(+20 files in other folders)
