[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "chess>=1.11.2",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "fastapi[standard]>=0.117.1",
    "psycopg2-binary>=2.9.10",
    "pymongo[srv]>=4.16.0",
    "redis>=6.4.0",
]
